--- a/index.html
+++ b/index.html
@@ -4,36 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post to Mastodon</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        #postContent {
-            width: 100%;
-            height: 100px;
-            margin-bottom: 10px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
 </head>
 <body>
-    <h1>Post to Mastodon</h1>
-    <textarea id="postContent" placeholder="What's on your mind?"></textarea><br>
+    <textarea id="statusContent" placeholder="What's on your mind?"></textarea><br>
     <button onclick="postToMastodon()">Post</button>
 
     <script>
         async function postToMastodon() {
-            const content = document.getElementById('postContent').value;
+            const content = document.getElementById('statusContent').value;
+            const accessToken = 'RcOn3COmNK56tUXakanY1WSUo-AgagUdOKeSQqQEhRU'; // 替换为你的访问令牌
 
             if (!content) {
                 alert('Please enter some content to post.');
@@ -41,26 +20,25 @@
             }
 
             try {
-                const response = await fetch('https://mstd-post.onrender.com', {
+                const response = await fetch('https://mastodon.example.com/api/v1/statuses', {
                     method: 'POST',
                     headers: {
+                        'Authorization': `Bearer ${accessToken}`,
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({ status: content })
                 });
 
-                console.log('Response status:', response.status); // 添加日志记录
-
                 if (response.ok) {
                     alert('Post successful!');
-                    document.getElementById('postContent').value = '';  // 清空输入框
+                    document.getElementById('statusContent').value = '';  // 清空输入框
                 } else {
                     const errorText = await response.text();
-                    console.error('Failed to post. Error:', errorText); // 添加日志记录
+                    console.error('Failed to post. Error:', errorText);
                     alert('Failed to post. Error: ' + errorText);
                 }
             } catch (error) {
-                console.error('Error:', error); // 添加日志记录
+                console.error('Error:', error);
                 alert('An error occurred. Please try again.');
             }
         }
