--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             }
 
             try {
-                const response = await fetch('https://mastodon.example.com/api/v1/statuses', {
+                const response = await fetch('https://mastodon.social/api/v1/statuses', {
                     method: 'POST',
                     headers: {
                         'Authorization': `Bearer ${accessToken}`,
